# plushpal

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  close-external-prs.yml
apps/android/flutter_app/: README.md  pubspec.yaml
apps/android/flutter_app/android/app/: build.gradle.kts
apps/android/flutter_app/android/app/src/main/cpp/: CMakeLists.txt  native_mobile_jni.cpp
apps/android/flutter_app/ios/Flutter/: Debug.xcconfig
apps/android/flutter_app/ios/Runner/: AppDelegate.swift  Info.plist  PlushPalPlatformPlugin.swift  Runner-Bridging-Header.h
apps/android/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
apps/android/flutter_app/lib/: main.dart
apps/android/flutter_app/lib/src/: app.dart
apps/android/flutter_app/lib/src/backend/: backend_client.dart  backend_client_stub.dart  (+1 more)
apps/android/flutter_app/test/: app_state_test.dart  audio_normalization_test.js  backend_client_test.dart  platform_bridge_test.dart  plushpal_backend_web_test.mjs  widget_test.dart
apps/android/flutter_app/web/: audio_normalization.js  index.html  manifest.json  plushpal_backend.js  plushpal_bootstrap.js
apps/macos/client_app/: AppShell.swift
apps/macos/station_app/: AppShell.swift
apps/station/macstation_host/: Cargo.toml  build.rs
apps/station/macstation_host/assets/flutter_web/: .last_build_id  flutter_bootstrap.js  index.html  main.dart.js  plushpal_backend.js  plushpal_bootstrap.js  version.json
apps/station/macstation_host/assets/flutter_web/assets/: NOTICES
apps/station/macstation_host/examples/: chatterbox_voice_smoke.rs  model_smoke.rs  voice_smoke.rs
apps/station/macstation_host/src/: lib.rs  main.rs
apps/web/: README.md
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/audio_core/: Cargo.toml
crates/audio_core/src/: lib.rs
crates/character_voice/: Cargo.toml
crates/character_voice/src/: lib.rs
crates/cloud_provider/: Cargo.toml
crates/cloud_provider/src/: lib.rs
crates/core_domain/: Cargo.toml
crates/core_domain/src/: lib.rs
crates/curated_search/: Cargo.toml
crates/curated_search/src/: lib.rs
crates/desktop_gateway/: Cargo.toml
crates/desktop_gateway/src/: lib.rs
crates/device_capability/: Cargo.toml
crates/device_capability/src/: lib.rs
crates/encrypted_storage/: Cargo.toml
crates/encrypted_storage/src/: lib.rs
crates/llama_native_ffi/: Cargo.toml  build.rs
crates/llama_native_ffi/src/: lib.rs
crates/local_llm_llamacpp/: Cargo.toml
crates/local_llm_llamacpp/src/: lib.rs
crates/mobile_bridge/: Cargo.toml
crates/mobile_bridge/src/: lib.rs
crates/model_lifecycle/: Cargo.toml
crates/model_lifecycle/src/: lib.rs
crates/parent_controls/: Cargo.toml
crates/parent_controls/src/: lib.rs
crates/platform_key_vault/: Cargo.toml  build.rs
crates/platform_key_vault/src/: lib.rs
crates/policy_engine/: Cargo.toml
crates/policy_engine/src/: lib.rs
crates/provider_api/: Cargo.toml
crates/provider_api/src/: lib.rs
crates/search_api/: Cargo.toml
crates/search_api/src/: lib.rs
crates/session_engine/: Cargo.toml
crates/session_engine/src/: lib.rs
docs/: PUBLICATION_POLICY.md
docs/adr/: 0000-template.md  0001-shared-core-boundaries.md
docs/architecture/: ANDROID_MACSTATION_MVP_ARCHITECTURE.md  CODEBASE_DIRECTORY_GUIDE.md  SYSTEM_DESIGN.md  SYSTEM_DESIGN_INTERVIEW_PREP.md
docs/archive/: README.md  private_voice_plush_toy_architecture_design.md
docs/implementation/: EXECUTION_PLAN.md  PRODUCTION_HARDENING_PLAN.md
docs/product/: KNOWN_LIMITATIONS.md  PRIVACY_AND_SECURITY.md
docs/release/: GITHUB_REPOSITORY_SETTINGS.md  INCIDENT_AND_ROLLBACK.md  LOCAL_VERIFICATION_2026-06-19.md  NETWORK_ALLOWLIST.md  QA_TEST_PLAN_AND_EXECUTION_2026-06-24.md  QA_TEST_PLAN_AND_EXECUTION_2026-06-25.md  RELEASE_CHECKLIST.md  REQUIREMENTS_TRACEABILITY.md  THIRD_PARTY_LICENSES.md
docs/specifications/: PlushPal_MVP_Detailed_Implementation_Plan_v1.1.docx  PlushPal_Product_Requirements_and_Architecture_v5.0.docx  README.md
models/: README.md
models/manifests/: qwen3-1.7b-q8-v1.json  qwen3-1.7b-q8-v1.sig.hex
models/trust/: private_beta_ed25519_public_key.hex
native/key_vault_abi/: CMakeLists.txt
native/key_vault_abi/include/: plushpal_key_vault.h
native/key_vault_abi/src/: apple_key_vault.mm  windows_credential_vault.cpp
native/key_vault_abi/tests/: apple_key_vault_conformance.cpp  key_vault_conformance.cpp
native/llama_abi/: CMakeLists.txt
native/llama_abi/include/: plushpal_llama.h
native/llama_abi/src/: plushpal_llama.cpp
native/llama_abi/tests/: abi_conformance.cpp
native/mobile_bridge/include/: plushpal_mobile.h
native/speech_abi/include/: plushpal_speech.h
packaging/: build-public-artifacts.sh  create-release-bundle.sh  verify-release-local.sh
packaging/android/: build-rust.sh
packaging/macos/: ClientInfo.plist.in  Info.plist.in  PlushBuddyStation.entitlements.in  PlushPal.entitlements.in  StationInfo.plist.in  install_chatterbox_runtime.sh  install_luxtts_runtime.sh  package.sh
packaging/macos/tests/: check_product_layout.sh
packaging/tests/: check_release_bundle.sh
packaging/windows/: package.ps1
qa/: README.md
qa/automation/: android_device_smoke.sh  android_station_pairing_smoke.sh  ios_simulator_smoke.sh  luxtts_installer_marker_test.py  macstation_api_smoke.py  macstation_live_reasoning_smoke.mjs  run_local_quality_gate.sh
qa/unit/: README.md
schemas/provider_response/: v1.json
schemas/search_evidence/: v1.json
tools/: voice_bakeoff.py  voice_chatterbox_tuning.py  voice_luxtts_denoise_bakeoff.py  voice_next_model_bakeoff.py  voice_stability_bakeoff.py
tools/github/: apply_repo_settings.sh  create_release.py
tools/github/tests/: check_create_release_dry_run.sh
tools/product/: doctor.sh  public_repo_check.sh
tools/voice/: chatterbox_tts.py  chatterbox_vc_tts.py  denoise_reference.py  gptsovits_tts.py  luxtts_tts.py  luxtts_worker.py  mlx_audio_tts.py  openvoice_tts.py  setup_chatterbox_macos.sh  setup_luxtts_macos.sh
(+7 files in other folders)
