[workspace]
resolver = "2"
members = [
  "crates/core_domain",
  "crates/policy_engine",
  "crates/provider_api",
  "crates/search_api",
  "crates/application",
  "crates/device_capability",
  "crates/model_lifecycle",
  "crates/mobile_bridge",
  "crates/local_llm_llamacpp",
  "crates/llama_native_ffi",
  "crates/encrypted_storage",
  "crates/session_engine",
  "crates/curated_search",
  "crates/cloud_provider",
  "crates/desktop_gateway",
  "crates/audio_core",
  "crates/parent_controls",
  "crates/character_voice",
  "crates/platform_key_vault",
  "apps/station/macstation_host",
]

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
sha2 = "0.10.9"
subtle = "2.6.1"
axum = { version = "0.8.4", features = ["ws"] }
getrandom = "0.3.3"
fs2 = "0.4.3"
hex = "0.4.3"
base64 = "0.22.1"
aes-gcm = "0.10.3"
hound = "3.5.1"
http-body-util = "0.1.3"
rusqlite = { version = "=0.39.0", features = ["bundled-sqlcipher"] }
reqwest = { version = "=0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
ring = "=0.17.14"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tower = { version = "0.5.2", features = ["util"] }
sherpa-onnx = { version = "=1.13.3", default-features = false, features = ["static"] }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
rust-version = "1.86"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
