[package]
name = "plushpal-local-llm-llamacpp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
plushpal-core-domain = { path = "../core_domain" }
plushpal-provider-api = { path = "../provider_api" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

