[package]
name = "plushpal-mobile-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
plushpal-application = { path = "../application" }
plushpal-core-domain = { path = "../core_domain" }
plushpal-provider-api = { path = "../provider_api" }
plushpal-llama-native-ffi = { path = "../llama_native_ffi", optional = true }
plushpal-local-llm-llamacpp = { path = "../local_llm_llamacpp", optional = true }
plushpal-model-lifecycle = { path = "../model_lifecycle", optional = true }

[features]
default = []
native-runtime = [
    "dep:plushpal-llama-native-ffi",
    "dep:plushpal-local-llm-llamacpp",
    "dep:plushpal-model-lifecycle",
]
