cmake_minimum_required(VERSION 3.20)
project(plushpal_key_vault_abi LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(APPLE)
  enable_language(OBJCXX)
  add_library(plushpal_key_vault STATIC src/apple_key_vault.mm)
  target_link_libraries(plushpal_key_vault PRIVATE "-framework Security" "-framework CoreFoundation")
elseif(WIN32)
  add_library(plushpal_key_vault STATIC src/windows_credential_vault.cpp)
  target_link_libraries(plushpal_key_vault PRIVATE Advapi32)
else()
  message(FATAL_ERROR "PlushPal key vault currently supports Apple and Windows hosts")
endif()
target_include_directories(plushpal_key_vault PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")

include(CTest)
if(BUILD_TESTING)
  add_executable(plushpal_key_vault_conformance tests/key_vault_conformance.cpp)
  target_link_libraries(plushpal_key_vault_conformance PRIVATE plushpal_key_vault)
  add_test(NAME plushpal_key_vault_conformance COMMAND plushpal_key_vault_conformance)
endif()
